@@ -1,3 +1,5 @@
+* Ensure Form.Element#(select|focus) return an element. [jddalton]
+
 * Optimize method execution speed by using the static Element methods instead of the DOM element methods. [jddalton]
 
 * Optimize Array#clone by using slice() helper method. [jddalton]
